--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/nav_diary"
+        android:id="@+id/menu_diary"
         android:title="日记"
         android:icon="@android:drawable/ic_menu_edit" />
 
     <item
-        android:id="@+id/nav_calendar"
+        android:id="@+id/menu_calendar"
         android:title="日历"
         android:icon="@android:drawable/ic_menu_my_calendar" />
 
     <item
-        android:id="@+id/nav_profile"
+        android:id="@+id/menu_profile"
         android:title="我的"
-        android:icon="@android:drawable/ic_menu_manage" />
+        android:icon="@android:drawable/ic_menu_info_details" />
 
 </menu>
