--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -14,6 +14,6 @@
     <item
         android:id="@+id/menu_profile"
         android:title="我的"
-        android:icon="@android:drawable/ic_menu_info_details" />
+        android:icon="@android:drawable/ic_menu_manage" />
 
 </menu>
